--- a/kubernetes/yaml/01-pod.yaml
+++ b/kubernetes/yaml/01-pod.yaml
@@ -1,10 +1,11 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: hello-pod
+  name: nginx-pod
+  namespace: dev
 spec:
   containers:
-    - name: hello-pod
-      image: nginx
+    - name: nginx
+      image: nginx:latest
       ports:
-      - containerPort: 80
+        - containerPort: 80
